--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" href="/style.css">
       <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
       <script src="/script.js"></script>
-      <script src="https://unpkg.com/ionicon@5.5.2/dist/ionicons/ioni.js"></script>
+      <script src="https://unpkg.com/ionicon@5.5.2/dist/ionicons/ionicons.js"></script>
       </head>
       <body>
       <div class="container">
